syntax = "proto3";

message AppToHW {
  optional uint32 RPM_preset = 1;
  optional bool Immobolize = 2;
  optional bool MotorType = 3;
  optional int32 devMode = 4;
}

message HWToApp {
  float Bus_Current = 1;
  float SOC = 2;
  uint32 RPM = 3;
  int32 Torque = 4;
  string GPS = 5;
  uint32 GPS_size = 6;
  uint32 Net_Strength = 7;
  uint32 Device_Temp = 8;
  uint32 Motor_Temp = 9;
  float Bus_Voltage = 10;
  float Throttle = 11;
}
